--- a/test/tests/aleksi/maps/_map-merge-deep.scss
+++ b/test/tests/aleksi/maps/_map-merge-deep.scss
@@ -3,6 +3,7 @@
 // =============================================================================
 
 @import "aleksi/maps/map-merge-deep";
+@import "aleksi/maps/map-sort-keys";
 
 @include test-module('The function map-merge-deep')
 {
