--- a/test/tests/aleksi/maps/_map-select-keys.scss
+++ b/test/tests/aleksi/maps/_map-select-keys.scss
@@ -1,8 +1,8 @@
 // =============================================================================
-// =ALEKSI TESTS - MAP-SELECT
+// =ALEKSI TESTS - MAP-SELECT-KEYS
 // =============================================================================
 
-@import "aleksi/maps/map-select";
+@import "aleksi/maps/map-select-keys";
 
 @include test-module('The map-select-keys function')
 {
