--- a/test/tests/aleksi/maps/_map-sort-keys.scss
+++ b/test/tests/aleksi/maps/_map-sort-keys.scss
@@ -1,8 +1,8 @@
 // =============================================================================
-// =ALESKI TESTS - MAP-SORT
+// =ALESKI TESTS - MAP-SORT-KEYS
 // =============================================================================
 
-@import "aleksi/maps/map-sort";
+@import "aleksi/maps/map-sort-keys";
 
 @include test-module('The map-sort-keys function')
 {
