--- a/stylesheets/aleksi/_lists.scss
+++ b/stylesheets/aleksi/_lists.scss
@@ -13,7 +13,7 @@
 @import "aleksi/lists/get-nth";
 @import "aleksi/lists/contained-in";
 @import "aleksi/lists/walk";
-@import "aleksi/lists/list-filter";
+@import "aleksi/lists/filter";
 @import "aleksi/lists/depth";
 @import "aleksi/lists/remove-nth";
 @import "aleksi/lists/replace-nth";
