--- a/stylesheets/aleksi/maps/_map-walk-keys.scss
+++ b/stylesheets/aleksi/maps/_map-walk-keys.scss
@@ -1,48 +1,12 @@
 // =============================================================================
-// =ALEKSI - MAP-WALK
+// =ALEKSI - MAP-WALK-KEYS
 // =============================================================================
 ////
 //// @group aleksi-maps
 //// @author [Yoannis Jamar](http://yoannis.me)
 
-@import "sassy-maps";
 @import "aleksi/general/throw";
 @import "aleksi/maps/is-map";
-
-// =map-walk( $map, $func[, $args... ])
-// -----------------------------------------------------------------------------
-/// Applies the given function to all values inside a map. The map's current
-/// value is passed as first argument to the function.
-///
-/// @param {map} $map - The map to walk over.
-/// @param {string} $func - The name of the function to apply to each value.
-/// @param {arglist} $args... - Additional arguments passed to '$func`.
-///
-/// @return {map} - The map with modified values.
-/// @throw Error `$map` must be a map.
-///
-/// @example scss
-///   $foo: map-walk(('foo': 'bar', 'bar': 'baz'), 'to-upper-case');
-///     // => ('foo': 'BAR', 'bar': 'BAZ')
-///
-/// @access public
-/// @since 0.1.0
-
-@function map-walk( $map, $func, $args... )
-{
-  @if not is-map($map) {
-    $e: throw-error('map-walk():: $map must be a map, was #{inspect($map)}.');
-  }
-
-  $res: ();
-
-  @each $key, $val in $map {
-    $new: if( length($args) == 0, call($func, $val), call($func, $val, $args...) );
-    $res: map-set($res, $key, $new);
-  }
-
-  @return $res;
-}
 
 // =map-walk-keys( $map, $func[, $args... ])
 // -----------------------------------------------------------------------------
@@ -71,8 +35,10 @@
 
   $res: ();
 
-  @each $key, $val in $map {
-    $res: map-set($res, call($func, $key, $args...), $val);
+  @each $key, $val in $map
+  {
+    $key: call($func, $key, $args...);
+    $res: map-merge($res, ($key: $val));
   }
 
   @return $res;
