--- a/test/tests/_aleksi.scss
+++ b/test/tests/_aleksi.scss
@@ -14,6 +14,7 @@
 @import "tests/aleksi/general/is-of-type";
 @import "tests/aleksi/general/default-to";
 @import "tests/aleksi/general/apply";
+@import "tests/aleksi/general/memo";
 
 // MATH
 @import "tests/aleksi/math/add";
