--- a/stylesheets/aleksi/general/_memo.scss
+++ b/stylesheets/aleksi/general/_memo.scss
@@ -4,9 +4,11 @@
 //// @group aleksi-general
 //// @author [Yoannis Jamar](http://yoannis.me)
 
-@import "aleksi/maps/map-has-deep-key";
-
 $__memo-table__: () !default;
+
+@import "aleksi/maps/map-set-deep";
+@import "aleksi/maps/map-has-deep-key";
+@import "aleksi/maps/map-get-deep";
 
 // =memo-set( $ns, $key, $value)
 // -----------------------------------------------------------------------------
@@ -24,7 +26,41 @@ $__memo-table__: () !default;
 @function memo-set( $ns, $key, $value )
 {
   // use interpolation to make sure $key is a string
-  $table: map-set-deep($__memo-table__, $ns, '#{$key}', $value) !global;
+  $__memo-table__: map-set-deep($__memo-table__, $ns, '#{$key}', $value) !global;
+  @return true;
+}
+
+// =memo-reset( $ns[, $key ])
+// -----------------------------------------------------------------------------
+/// Clears all values currently stored under given namespace or key by removing
+/// it from the memoization table. If no key is given, the whole namespace will
+/// be cleared.
+///
+/// @param {string} $ns - the namespace to remove from the memoization table
+/// @param {string} $key ['__none__'] - the key to remove from the namespace
+///
+/// @return {bool} - true
+///
+/// @api public
+/// @since 0.4.0
+
+@function memo-reset( $ns, $key: '__none__' )
+{
+  @if map-has-key($__memo-table__, $ns)
+  {
+    // if no key was given
+    @if $key == '__none__' {
+      // remove the whole namespace
+      $__memo-table__: map-remove($__memo-table__, $ns) !global;
+    }
+
+    @else {
+      // only remove the given key
+      $values: map-remove(map-get($__memo-table__, $ns), $key);
+      $__memo-table__: map-merge($__memo-table__, ($ns: $values)) !global;
+    }
+  }
+
   @return true;
 }
 
@@ -42,8 +78,18 @@ $__memo-table__: () !default;
 
 @function memo-has( $ns, $key )
 {
-  // use interpolation to make sure $key is a string
-  @return map-has-deep-key($__memo-table__, $ns, '#{$key}');
+  // // check if $ns was already used to store a value
+  // @if map-has-key($__memo-table__, $ns) {
+  //   // check if $key was already used to store a value with $ns
+  //   // - use interpolation to make sure $key is a string
+  //   @if map-has-key(map-get($__memo-table__, $ns), '#{$key}') {
+  //     @return true;
+  //   }
+  // }
+
+  // @return false;
+
+  @return map-has-deep-key($__memo-table__, $ns, $key);
 }
 
 // =memo-get( $ns, $key, $value)
