nested memoization keys + implement ‘map-remove-deep’

--- a/stylesheets/aleksi/_arglists.scss
+++ b/stylesheets/aleksi/_arglists.scss
@@ -6,5 +6,5 @@
 //// @group aleksi-arglists
 //// @author [Yoannis Jamar](http://yoannis.com)
 
-@import "aleksi/arglists/prepend";
-@import "aleksi/arglists/append";
+@import "aleksi/arglists/arglist-prepend";
+@import "aleksi/arglists/arglist-append";
