--- a/stylesheets/aleksi/_maps.scss
+++ b/stylesheets/aleksi/_maps.scss
@@ -26,6 +26,7 @@
 @import "aleksi/maps/map-has-deep-key";
 
 // transforming maps
+@import "aleksi/maps/map-remove-deep";
 @import "aleksi/maps/map-walk-values";
 @import "aleksi/maps/map-walk-keys";
 @import "aleksi/maps/map-sort-values";
