--- a/stylesheets/aleksi/arglists/_arglist-prepend.scss
+++ b/stylesheets/aleksi/arglists/_arglist-prepend.scss
@@ -2,22 +2,21 @@
 // =ALEKSI - ARGLIST-APPEND
 // =============================================================================
 ////
-////
 //// @group aleksi-arglists
 //// @author [Yoannis Jamar](http://yoannis.com)
 
-// =arglist-append( $arglist, $value[, $separator ])
+// =arglist-prepend( $arglist, $value[, $separator ])
 // -----------------------------------------------------------------------------
 
-@function arglist-append($arglist, $value, $separator: list-separator($arglist))
-{ 
-  // build list manually
-  @each $arg in $list {
+@function arglist-prepend($arglist, $value, $separator: list-separator($arglist))
+{
+  // add value at the beginning
+  $args: append((), $value, $separator);
+    
+  // build a list manually
+  @each $arg in $arglist {
     $args: append($args, $arg, $separator);
   }
-
-  // add value at the end
-  $args: append((), $value, $separator);
 
   @return $args;
 }
