--- a/stylesheets/aleksi/general/_memo.scss
+++ b/stylesheets/aleksi/general/_memo.scss
@@ -6,9 +6,13 @@
 
 $__memo-table__: () !default;
 
+@import "SassyLists";
+@import "aleksi/general/throw";
+@import "aleksi/arglists/arglist-prepend";
 @import "aleksi/maps/map-set-deep";
 @import "aleksi/maps/map-has-deep-key";
 @import "aleksi/maps/map-get-deep";
+@import "aleksi/maps/map-remove-deep";
 
 // =memo-set( $ns, $key, $value)
 // -----------------------------------------------------------------------------
@@ -23,11 +27,16 @@ $__memo-table__: () !default;
 /// @api public
 /// @since 0.4.0
 
-@function memo-set( $ns, $key, $value )
+@function memo-set( $ns, $keys... )
 {
-  // use interpolation to make sure $key is a string
-  $__memo-table__: map-set-deep($__memo-table__, $ns, '#{$key}', $value) !global;
-  @return $value;
+  // $ns is the first-level key
+  $keys: arglist-prepend($keys, $ns);
+
+  // store value in the list of keys
+  $__memo-table__: map-set-deep($__memo-table__, $keys...) !global;
+
+  // return $value, which is the last argument
+  @return nth($keys, -1);
 }
 
 // =memo-clear( $ns[, $key ])
@@ -37,28 +46,34 @@ $__memo-table__: () !default;
 /// be cleared.
 ///
 /// @param {string} $ns - the namespace to remove from the memoization table
-/// @param {string} $key ['__none__'] - the key to remove from the namespace
+/// @param {string} $keys... - the path of nested key(s) to remove
 ///
 /// @return {bool} - true
 ///
 /// @api public
 /// @since 0.4.0
 
-@function memo-clear( $ns, $key: '__none__' )
+@function memo-clear( $ns, $keys... )
 {
-  @if map-has-key($__memo-table__, $ns)
-  {
-    // if no key was given
-    @if $key == '__none__' {
-      // remove the whole namespace
-      $__memo-table__: map-remove($__memo-table__, $ns) !global;
-    }
+  // namespace is the first-level key
+  $keys: arglist-prepend($keys, $ns);
+  $i: length($keys);
 
-    @else {
-      // only remove the given key
-      $values: map-remove(map-get($__memo-table__, $ns), $key);
-      $__memo-table__: map-merge($__memo-table__, ($ns: $values)) !global;
-    }
+  // remove the longest path of keys that actually exist
+  @while $i > 1 and not map-has-deep-key($__memo-table__, $keys...)
+  {
+    $i: $i - 1;
+    $keys: sl-slice($keys, 1, $i);
+  }
+
+  // if only namespace was given
+  @if $i == 1 {
+    $__memo-table__: map-remove($__memo-table__, nth($keys, 1)) !global;
+  }
+
+  // if path of keys was found
+  @if $i > 0 {
+    $__memo-table__: map-remove-deep($__memo-table__, $keys...) !global;
   }
 
   @return true;
@@ -76,20 +91,9 @@ $__memo-table__: () !default;
 /// @api public
 /// @since 0.4.0
 
-@function memo-has( $ns, $key )
+@function memo-has( $ns, $keys... )
 {
-  // // check if $ns was already used to store a value
-  // @if map-has-key($__memo-table__, $ns) {
-  //   // check if $key was already used to store a value with $ns
-  //   // - use interpolation to make sure $key is a string
-  //   @if map-has-key(map-get($__memo-table__, $ns), '#{$key}') {
-  //     @return true;
-  //   }
-  // }
-
-  // @return false;
-
-  @return map-has-deep-key($__memo-table__, $ns, $key);
+  @return map-has-deep-key($__memo-table__, $ns, $keys...);
 }
 
 // =memo-get( $ns, $key, $value)
@@ -109,16 +113,19 @@ $__memo-table__: () !default;
 /// @api public
 /// @since 0.4.0
 
-@function memo-get( $ns, $key )
+@function memo-get( $ns, $keys... )
 {
-  // use interpolation to make sure $key is a string
-  $key: '#{$key}';
-
   // return value that was stored using 'memo-set'
-  @if memo-has($ns, $key) {
-    @return map-get-deep($__memo-table__, $ns, $key);
+  @if memo-has($ns, $keys...) {
+    @return map-get-deep($__memo-table__, $ns, $keys...);
   }
 
-  $e: throw-error('memo-get(): no value was found for #{inspect($ns)} -> #{inspect($key)} – always test with `memo-has()` before calling `memo-get()`');
+  // build path to show in error message
+  $path: '#{$ns}';
+  @each $key in $path-keys {
+    $path: '->#{$key}';
+  }
+
+  $e: throw-error('memo-get(): no value was found for `#{path}` – always test with `memo-has()` before calling `memo-get()`');
   @return '__none__';
 }
