--- a/stylesheets/aleksi/maps/_map-set-deep.scss
+++ b/stylesheets/aleksi/maps/_map-set-deep.scss
@@ -49,8 +49,9 @@
     $keys: nth($keys, 1);
   }
 
+  // allow passing keys as separate arguments
+  // - value is the last argument
   @else {
-    // last argument is $value
     $value: nth($keys, -1);
     $keys: sl-slice($keys, 1, $length - 1);
   }
@@ -77,14 +78,15 @@
     $merge: map-merge($map-level, $merge);
   }
 
-  @for $i from ($length * -1 + 1) through -1
+  // loop over keys in reverse order
+  $i: $length - 1;
+  @while $i > 0
   {
-    $j: abs($i);
-    $key: nth($keys, $j);
-
-    @if $j > 1
+    $key: nth($keys, $i);
+    
+    @if $i > 1
     {
-      $get-keys: sl-slice($keys, 1, $j - 1);
+      $get-keys: sl-slice($keys, 1, $i - 1);
       $map-level: map-get-deep($map, $get-keys);
 
       @if not is-map($map-level) {
@@ -103,6 +105,8 @@
     @else {
       $merge: ($key: $merge);
     }
+
+    $i: $i - 1;
   }
 
   $map: map-merge($map, $merge);
