--- a/stylesheets/aleksi/maps/_map-insert.scss
+++ b/stylesheets/aleksi/maps/_map-insert.scss
@@ -7,6 +7,7 @@
 
 @import "aleksi/general/throw";
 @import "aleksi/maps/is-map";
+@import "aleksi/maps/map-set";
 
 // =map-insert( $map, $position, $values )
 // -----------------------------------------------------------------------------
