--- a/test/tests/_aleksi.scss
+++ b/test/tests/_aleksi.scss
@@ -37,6 +37,8 @@
 @import "tests/aleksi/lists/implode";
 @import "tests/aleksi/lists/next";
 @import "tests/aleksi/lists/previous";
+@import "tests/aleksi/lists/sort";
+@import "tests/aleksi/lists/purge";
 @import "tests/aleksi/lists/walk";
 @import "tests/aleksi/lists/filter";
 @import "tests/aleksi/lists/depth";
