--- a/stylesheets/aleksi/_lists.scss
+++ b/stylesheets/aleksi/_lists.scss
@@ -12,8 +12,10 @@
 @import "aleksi/lists/previous";
 @import "aleksi/lists/get-nth";
 @import "aleksi/lists/contained-in";
+@import "aleksi/lists/depth";
+@import "aleksi/lists/sort";
+@import "aleksi/lists/purge";
 @import "aleksi/lists/walk";
 @import "aleksi/lists/filter";
-@import "aleksi/lists/depth";
 @import "aleksi/lists/remove-nth";
 @import "aleksi/lists/replace-nth";
