implement ‘every’ + ‘list-every’ + ‘map-every’  + ‘some’ + ‘list-some’ + ‘map-some’

--- a/stylesheets/aleksi/_lists.scss
+++ b/stylesheets/aleksi/_lists.scss
@@ -13,6 +13,8 @@
 @import "aleksi/lists/get-nth";
 @import "aleksi/lists/contained-in";
 @import "aleksi/lists/depth";
+@import "aleksi/lists/every";
+@import "aleksi/lists/some";
 @import "aleksi/lists/sort";
 @import "aleksi/lists/purge";
 @import "aleksi/lists/walk";
