--- a/stylesheets/aleksi/_maps.scss
+++ b/stylesheets/aleksi/_maps.scss
@@ -24,6 +24,8 @@
 @import "aleksi/maps/map-find-keys";
 @import "aleksi/maps/map-has-keys";
 @import "aleksi/maps/map-has-deep-key";
+@import "aleksi/maps/map-every";
+@import "aleksi/maps/map-some";
 
 // transforming maps
 @import "aleksi/maps/map-remove-deep";
