--- a/stylesheets/aleksi/sides/_side-value.scss
+++ b/stylesheets/aleksi/sides/_side-value.scss
@@ -66,7 +66,7 @@
   }
 
   @else {
-    @return throw-error('side-list-value():: $side is must be either');
+    @return throw-error('side-list-value():: `$side` is must be either "top", "right", "bottom" or "left" – was `#{inspect($side)}`');
   }
 }
 
